# WebSocket

./: CMakeLists.txt  Main.c  Main.cpp  README.md  project_build.sh
Docs/: .~lock.OCPP_APIs.xlsx#  OCPP_APIs.xlsx
coding-practice/: BoostClient.cpp  BoostServer.cpp  JsonParsing.cpp  TLSClient.cpp  TLSServer.cpp  main.cpp  server  server.crt  server.key  server.pem
coding-practice/Websocket_C/: Client.c  JsonSample.pcap  SampleDataTLS.c  Server.c  client  data  mydump.pcap  server  server.crt  server.csr  server.key
coding-practice/Websocket_C/LinuxConcepts/: ProcessCreation.c  process
coding-practice/Websocket_C/TLS/: Client.c  Server.c  cert.pem  client  key.pem  mydump.pcap  websocket_server
coding-practice/Websocket_C/TLS/Certs/: Exec  RSA_KEY_CSR.c  RSA_Key_Generation.c  RSA_PrivteKey.c  csr.pem  keygen  private_key.pem  privkey  public_key.pem
coding-practice/exec/: exeClient  exeServer  server.crt  server.csr
exe/: WebSocket
src/Common/: ProcessUtils.c  ProcessUtils.h
src/Communication/WebSocket/Client/: TLSClient.c  TLSClient.h  exeClient  server.key
src/Communication/WebSocket/Server/: TLSServer.c  TLSServer.h
